pycoreloop/core_loop.py


# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 371
for _lib in _libs.values():
    if not _lib.has("encode_10plus6", "cdecl"):
        continue
    encode_10plus6 = _lib.get("encode_10plus6", "cdecl")
    encode_10plus6.argtypes = [c_int32]
    encode_10plus6.restype = c_uint16
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 372
for _lib in _libs.values():
    if not _lib.has("decode_10plus6", "cdecl"):
        continue
    decode_10plus6 = _lib.get("decode_10plus6", "cdecl")
    decode_10plus6.argtypes = [c_uint16]
    decode_10plus6.restype = c_int32
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 378
for _lib in _libs.values():
    if not _lib.has("encode_shared_lz_positive", "cdecl"):
        continue
    encode_shared_lz_positive = _lib.get("encode_shared_lz_positive", "cdecl")
    encode_shared_lz_positive.argtypes = [POINTER(c_uint32), POINTER(c_ubyte), c_int]
    encode_shared_lz_positive.restype = c_int
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 379
for _lib in _libs.values():
    if not _lib.has("decode_shared_lz_positive", "cdecl"):
        continue
    decode_shared_lz_positive = _lib.get("decode_shared_lz_positive", "cdecl")
    decode_shared_lz_positive.argtypes = [POINTER(c_ubyte), POINTER(c_uint32), c_int]
    decode_shared_lz_positive.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 385
for _lib in _libs.values():
    if not _lib.has("encode_shared_lz_signed", "cdecl"):
        continue
    encode_shared_lz_signed = _lib.get("encode_shared_lz_signed", "cdecl")
    encode_shared_lz_signed.argtypes = [POINTER(c_int32), POINTER(c_ubyte), c_int]
    encode_shared_lz_signed.restype = c_int
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 386
for _lib in _libs.values():
    if not _lib.has("decode_shared_lz_signed", "cdecl"):
        continue
    decode_shared_lz_signed = _lib.get("decode_shared_lz_signed", "cdecl")
    decode_shared_lz_signed.argtypes = [POINTER(c_ubyte), POINTER(c_int32), c_int]
    decode_shared_lz_signed.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 389
for _lib in _libs.values():
    if not _lib.has("encode_4_into_5", "cdecl"):
        continue
    encode_4_into_5 = _lib.get("encode_4_into_5", "cdecl")
    encode_4_into_5.argtypes = [POINTER(c_int32), POINTER(c_uint16)]
    encode_4_into_5.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 390
for _lib in _libs.values():
    if not _lib.has("decode_5_into_4", "cdecl"):
        continue
    decode_5_into_4 = _lib.get("decode_5_into_4", "cdecl")
    decode_5_into_4.argtypes = [POINTER(c_uint16), POINTER(c_int32)]
    decode_5_into_4.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 393
for _lib in _libs.values():
    if not _lib.has("CRC", "cdecl"):
        continue
    CRC = _lib.get("CRC", "cdecl")
    CRC.argtypes = [POINTER(None), c_size_t]
    CRC.restype = c_uint32
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 396
for _lib in _libs.values():
    if not _lib.has("fft_precompute_tables", "cdecl"):
        continue
    fft_precompute_tables = _lib.get("fft_precompute_tables", "cdecl")
    fft_precompute_tables.argtypes = []
    fft_precompute_tables.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 397
for _lib in _libs.values():
    if not _lib.has("fft", "cdecl"):
        continue
    fft = _lib.get("fft", "cdecl")
    fft.argtypes = [POINTER(c_uint32), POINTER(c_uint32)]
    fft.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 7
try:
    VERSION_ID = 768
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 21
try:
    CAL_MODE_BIT_SLICER_SETTLE = 16
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 23
try:
    CAL_MODE_SNR_SETTLE = 32
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 25
try:
    CAL_MODE_RUN = 48
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 27
try:
    CAL_MODE_BLIND = 64
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 29
try:
    CAL_MODE_ZOOM = 80
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 19
try:
    DISPATCH_DELAY = 6
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 20
try:
    RESETTLE_DELAY = 5
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 21
try:
    HEARTBEAT_DELAY = 1024
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 22
try:
    CMD_BUFFER_SIZE = 512
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 23
try:
    MAX_LOOPS = 4
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 24
try:
    ADC_STAT_SAMPLES = 16000
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 25
try:
    MAX_STATE_SLOTS = 16
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 26
try:
    BITSLICER_MAX_ACTION = 5
except:
    pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 353
def MAX(x, y):
    return (x > y) and x or y

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 354
def MIN(x, y):
    return (x < y) and x or y

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 355
def IS_NEG(x):
    return (x < 0) and 1 or 0

calibrator_state = struct_calibrator_state# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 36

calibrator_metadata = struct_calibrator_metadata# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 62

saved_calibrator_weights = struct_saved_calibrator_weights# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 75

core_state = struct_core_state# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 159

route_state = struct_route_state# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 64

time_counters = struct_time_counters# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 68

core_state_base = struct_core_state_base# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 78

cdi_stats = struct_cdi_stats# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 121

delayed_cdi_sending = struct_delayed_cdi_sending# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 127

watchdog_config = struct_watchdog_config# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 144

watchdog_packet = struct_watchdog_packet# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 152

saved_state = struct_saved_state# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 196

state_recover_notification = struct_state_recover_notification# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 203

end_of_sequence = struct_end_of_sequence# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 208

startup_hello = struct_startup_hello# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 213

heartbeat = struct_heartbeat# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 224

meta_data = struct_meta_data# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 237

housekeeping_data_base = struct_housekeeping_data_base# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 243

housekeeping_data_0 = struct_housekeeping_data_0# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 250

housekeeping_data_1 = struct_housekeeping_data_1# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 255

# No inserted files

# No prefix-stripping

